@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.movielib"
     name="Movielib"
-    version="1.4.7"
+    version="1.4.8"
     provider-name="Regss">
     <requires>
         <import addon="xbmc.python" version="2.14.0" />
