@@ -1,3 +1,7 @@
+[B]1.4.8[/B]
+- Added: when start playing update banner to "now playing"
+- Added: trying to copy image if PIL module not exist
+
 [B]1.4.7[/B]
 - Fixed: syncing arts from local source
 
